- main novelty: new local auth using AuthProvider package including new UI components, routes, logic, local account model (WIP) - new Auth views for creating a new organization and joining a team with a new device or as a new user using an invitation code - new MemberList view to administrate devices and organization members and to create invitations - added support for camera usage with regard to system permissions, entitlement and usage description texts - added support for custom url scheme and for navigating this app using these deeplinks - added QRCodeScanner - show banner when offline - store absences on user, not the team, as user can be in multiple teams - sync data of AbsencePage using AuthProvider and automerge-repo packages - adapted AbsencePage for mobile screens and touch devices - generate app icons only when building for a different environment or when explicitly wanted - prototyped UI for AvailabilitiesPage (WIP) - OverviewPage: improved prototype UI and added test data for widgets (requests, notifications, shifts, vacation) - Settings and NavigationDrawer: made team and organization names editable - prevent multiple running app instances on windows and linux - extended EditingSheet functionality and appearance

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -5,13 +5,14 @@
 ::-moz-selection
   background: var(--q-primary)
   color: #ffffff
+body
+  -webkit-user-select: none
+  -webkit-touch-callout: none
 .selectable
   -webkit-user-select: auto
   -moz-user-select: auto
   -ms-user-select: auto
   user-select: auto
-#q-app
-  background-color: #ffffff
 .q-tab
   @media screen and (max-width: $breakpoint-xs-max)
     padding: 0 4px
@@ -239,3 +240,24 @@ body.q-ios-padding .q-notifications__list--top
   border-color: var(--q-accent)
 .border-extra
   border-color: var(--q-extra)
+.section-heading
+  font-size: 1.25rem
+  font-weight: 500
+  line-height: 2.5rem
+  letter-spacing: 0.00937em
+  border-bottom: 1px solid #ccc
+  margin-top: 2rem
+  margin-bottom: .5rem
+  &.q-mt-none
+    margin-top: 0
+  &+ div
+    padding-left: 40px
+    @media screen and (max-width: $breakpoint-sm-max)
+      padding-left: 16px
+.border-top-grey
+  border-top: 1px solid #cccccc
+.border-bottom-grey
+  border-bottom: 1px solid #cccccc
+.indent
+  margin-left: 16px
+  text-indent: -16px
