- added hidden demo mode - added support for custom sync servers - improved HTML sanitation - fixed app launch with deeplinks for windows and linux - improved and merged several components and files that are shared with CoopCare - refactoring

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -163,7 +163,7 @@ body.q-ios-padding .q-notifications__list--top
   background-color: var(--q-primary)
 .text-primary-gradient
   color: var(--q-primary)
-.fullscreen.bg-primary-gradient
+.bg-fullscreen
   background-image: linear-gradient(var(--q-secondary), var(--q-primary) 70%)
 .bg-primary-light
   background-color: var(--q-primary-bg) !important
